lib/Sema/TypeCheckDecl.cpp
@@ -957,7 +957,8 @@ static void checkRedeclaration(TypeChecker &tc, ValueDecl *current) {
     CanType otherSigType = other->getOverloadSignatureType();
 
     // If there is another conflict, complain.
-    if (conflicting(currentSig, currentSigType, otherSig, otherSigType)) {
+    if (conflicting(tc.Context, currentSig, currentSigType,
+                    otherSig, otherSigType)) {
       // If the two declarations occur in the same source file, make sure
       // we get the diagnostic ordering to be sensible.
       if (auto otherFile = other->getDeclContext()->getParentSourceFile()) {
