test/IDE/complete_multiple_files.swift
@@ -13,11 +13,11 @@ func testObjectExpr() {
   fooObject.#^T1^#
 }
 // T1: Begin completions
-// T1-NEXT: Decl[InstanceVar]/CurrNominal: instanceVar[#Int#]; name=instanceVar
+// T1-NEXT: Decl[InstanceVar]/CurrNominal:    instanceVar[#Int#]{{; name=.+$}}
 // T1-NEXT: Decl[InstanceMethod]/CurrNominal: instanceFunc0()[#Void#]{{; name=.+$}}
 //
 // FIX-ME(SR-7225): We shouldn't duplicate this.
-// T1-NEXT: Decl[InstanceVar]/Super: instanceVar[#Int#]; name=instanceVar
+// T1-NEXT: Decl[InstanceVar]/Super: instanceVar[#Int#]{{; name=.+$}}
 // T1-NEXT: End completions
 
 func testGenericObjectExpr() {
@@ -28,7 +28,7 @@ func testGenericObjectExpr() {
 // T2-NEXT: Decl[InstanceMethod]/CurrNominal: instanceFunc0()[#Void#]{{; name=.+$}}
 //
 // FIX-ME(SR-7225): We shouldn't duplicate this.
-// T2-NEXT: Decl[InstanceVar]/Super: instanceVar[#Int#]; name=instanceVar
+// T2-NEXT: Decl[InstanceVar]/Super: instanceVar[#Int#]{{; name=.+$}}
 // T2-NEXT: End completions
 
 func topLevel1() {
